@@ -37,6 +37,8 @@ Bug Fixes
 ---------------------
 * SOLR-17152: Better alignment of Admin UI graph (janhoy)
 
+* SOLR-17148: Fixing Config API overlay property enabling or disabling the cache (Sanjay Dutt, hossman, Eric Pugh)
+
 Dependency Upgrades
 ---------------------
 (No changes)
